archived_docs/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/configuration/configuration.adoc
= Monitoring Configuration Guides
:page-languages: [en, zh]
:revdate: 2025-05-28
:page-revdate: {revdate}

This page captures some of the most important options for configuring Monitoring V2 in the Rancher UI.

For information on configuring custom scrape targets and rules for Prometheus, please refer to the upstream documentation for the https://github.com/prometheus-operator/prometheus-operator[Prometheus Operator.] Some of the most important custom resources are explained in the Prometheus Operator https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/getting-started/design.md[design documentation.] The Prometheus Operator documentation can help also you set up RBAC, Thanos, or custom configuration.

== Setting Resource Limits and Requests

The resource requests and limits for the monitoring application can be configured when installing `rancher-monitoring`. For more information about the default limits, see xref:./helm-chart-options.adoc#_configuring_resource_limits_and_requests[this page.]

[TIP]
====

On an idle cluster, Monitoring may have high CPU usage. To improve performance, turn off the Prometheus adapter.
====


== Prometheus Configuration

It is usually not necessary to directly edit the Prometheus custom resource.

Instead, to configure Prometheus to scrape custom metrics, you will only need to create a new ServiceMonitor or PodMonitor to configure Prometheus to scrape additional metrics.

=== ServiceMonitor and PodMonitor Configuration

For details, see xref:observability/monitoring-and-dashboards/configuration/servicemonitors-and-podmonitors.adoc[this page.]

=== Advanced Prometheus Configuration

For more information about directly editing the Prometheus custom resource, which may be helpful in advanced use cases, see xref:observability/monitoring-and-dashboards/configuration/advanced/prometheus.adoc[this page.]

== Alertmanager Configuration

The Alertmanager custom resource usually doesn't need to be edited directly. For most common use cases, you can manage alerts by updating Routes and Receivers.

Routes and receivers are part of the configuration of the alertmanager custom resource. In the Rancher UI, Routes and Receivers are not true custom resources, but pseudo-custom resources that the Prometheus Operator uses to synchronize your configuration with the Alertmanager custom resource. When routes and receivers are updated, the monitoring application will automatically update Alertmanager to reflect those changes.

For some advanced use cases, you may want to configure alertmanager directly. For more information, refer to xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[this page.]

=== Receivers

Receivers are used to set up notifications. For details on how to configure receivers, see xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[this page.]

=== Routes

Routes filter notifications before they reach receivers. Each route needs to refer to a receiver that has already been configured. For details on how to configure routes, see xref:observability/monitoring-and-dashboards/configuration/routes.adoc[this page.]

=== Advanced

For more information about directly editing the Alertmanager custom resource, which may be helpful in advanced use cases, see xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[this page.]
